Added 'Peek', and some fixes
